test/fail/lambdas/lambda_bad_token.lly
#[
SyntaxError: Unexpected token '}'.
    from lambda_bad_token.lly:6
]#

var v = {|| }
